--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     'requests',
     'fonttools',
-    'python-dotenv'
+    'python-dotenv',
+    'camoufox[geoip]',
+    'browserforge',
 ]
